[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic driver to interface the ENC28J60 (Ethernet controller)"
documentation = "https://docs.rs/enc28j60"
edition = "2018"
keywords = ["embedded-hal-driver", "Ethernet", "SPI"]
license = "MIT OR Apache-2.0"
name = "enc28j60"
readme = "README.md"
repository = "https://github.com/japaric/enc28j60"
version = "0.3.0"

[dependencies]
as-slice = "0.1.0"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.embedded-hal]
version = "0.2.0"
features = ["unproven"]

[dependencies.byteorder]
default-features = false
version = "1.2.1"

[dependencies.owning-slice]
git = "https://github.com/japaric/owning-slice"

[dependencies.smoltcp]
default-features = false
features = ["proto-ipv4", "socket-tcp"]
version = "0.5.0"
optional = true

[dev-dependencies]
cortex-m-rt = "0.6.7"
cortex-m = "0.5.8"
panic-semihosting = "0.5.1"
stm32f1xx-hal = { git = "https://github.com/stm32-rs/stm32f1xx-hal.git", features = ["stm32f103", "rt"] }

[[example]]
name = "smoltcp"
required-features = ["smoltcp"]

[profile.dev]
opt-level = "s"
